// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductItem test item is exists 1`] = `
<div
  class="ProductItem card w-100 mb-4"
  data-testid="5"
>
  <img
    class="Image card-img-top"
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkMAYAADkANVKH3ScAAAAASUVORK5CYII="
  />
  <div
    class="card-body"
  >
    <h5
      class="ProductItem-Name card-title"
    >
      test name
    </h5>
    <p
      class="ProductItem-Price card-text"
    >
      $
      10
    </p>
    <a
      class="ProductItem-DetailsLink card-link"
      href="/catalog/5"
    >
      Details
    </a>
  </div>
</div>
`;

exports[`ProductItem test selected item is exists 1`] = `
<div
  class="ProductItem card w-100 mb-4"
  data-testid="5"
>
  <img
    class="Image card-img-top"
    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkMAYAADkANVKH3ScAAAAASUVORK5CYII="
  />
  <div
    class="card-body"
  >
    <h5
      class="ProductItem-Name card-title"
    >
      test name
    </h5>
    <p
      class="ProductItem-Price card-text"
    >
      $
      10
    </p>
    <a
      class="ProductItem-DetailsLink card-link"
      href="/catalog/5"
    >
      Details
    </a>
    <span
      class="CartBadge text-success mx-3"
    >
      Item in cart
    </span>
  </div>
</div>
`;
